--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,10 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  #push:
+   # branches: [ main ]
+  #pull_request:
+   # branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -36,9 +36,9 @@ jobs:
       - name: Install platform
         run: |
           arduino-cli core update-index
-          arduino-cli core install arduino:mbed:nano33ble
+          arduino-cli core install arduino:mbed
       
       # Compile the sketch
       - name: Compile Sketch
-        run: arduino-cli compile --fqbn arduino:mbed:nano33ble ./mbed_BLE_GAP_scanner
+        run: arduino-cli compile --fqbn arduino:mbed:nano33ble ./mbed_BLE_GAP_scanner.ino
         
