--- a/.github/workflows/install_mbedos.yml
+++ b/.github/workflows/install_mbedos.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install the platform
         run: |
           arduino-cli core update-index
-          arudino-cli core install arduino:mbed
+          arduino-cli core install arduino:mbed
           
       - name: install MbedOS
         run: |
