--- a/.github/workflows/install_mbedos.yml
+++ b/.github/workflows/install_mbedos.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           ls -lR
           ls /
-          find / -name 'arduino-cli'
+          which arduino-cli
           
         
   
