--- a/.github/workflows/install_mbedos.yml
+++ b/.github/workflows/install_mbedos.yml
@@ -23,9 +23,7 @@ jobs:
        
       - name: Configure mbed
         run: |
-          ls -lR
-          ls /
-          which arduino-cli
+          ls -lR `which arduino-cli`
           
         
   
