--- a/.github/workflows/install_mbedos.yml
+++ b/.github/workflows/install_mbedos.yml
@@ -23,6 +23,8 @@ jobs:
        
       - name: Configure mbed
         run: |
+          ls -l /usr/share
+          ls -lR /usr/share/arduino
           ls -lR `which arduino-cli`
           ls -lR /opt/hostedtoolcache/arduino-cli
         
