--- a/.github/workflows/install_mbedos.yml
+++ b/.github/workflows/install_mbedos.yml
@@ -19,12 +19,11 @@ jobs:
       - name: install MbedOS
         run: |
           python3 -m pip install mbed-cli
-          mbed --help
        
       - name: Configure mbed
         run: |
-          ls -l /usr/share
-          ls -lR /usr/share/arduino
+          ls -l /opt/hostedtoolcache
+          ls -l /opt
           ls -lR `which arduino-cli`
           ls -lR /opt/hostedtoolcache/arduino-cli
         
