--- a/.github/workflows/install_mbedos.yml
+++ b/.github/workflows/install_mbedos.yml
@@ -22,6 +22,7 @@ jobs:
        
       - name: Configure mbed
         run: |
+          arduino-cli config dump -v
           ls -l /opt/hostedtoolcache
           ls -l /opt
           ls -lR `which arduino-cli`
