--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,10 @@ name: CI
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  #push:
-   # branches: [ main ]
-  #pull_request:
-   # branches: [ main ]
+  push:
+   branches: [ main ]
+  pull_request:
+   branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -25,9 +25,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Show Config
-        run: ls -lR
-        
       # Install the Arduino-CLI so we can compile
       - name: Install Arduino CLI
         uses: arduino/setup-arduino-cli@v1.1.1
